<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sheikhimtiaz.pegasusride.ScrollingActivity">


    <item
        android:id="@+id/profileView"
        android:title="@string/profileView"/>

    <item
        android:id="@+id/logIn"
        android:title="@string/logIn"/>

    <item
        android:id="@+id/logOut"
        android:title="@string/logOut"/>

    <item
        android:id="@+id/registerNow"
        android:title="@string/registerNow" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="true"
        android:enabled="true" />

</menu>
